--- a/front-mobile/package.json
+++ b/front-mobile/package.json
@@ -14,23 +14,25 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
     "dayjs": "^1.10.3",
-    "expo": "^40.0.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
-    "expo-cli": "^4.0.17",
+    "expo-cli": "^4.1.6",
     "expo-font": "~8.4.0",
-    "expo-status-bar": "^1.0.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.13.1",
+    "expo-localization": "^9.1.0",
+    "expo-status-bar": "~1.0.3",
+    "intl": "^1.2.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "^0.13.18"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/react": "^16.14.2",
+    "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "^0.63.45",
+    "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
   },
   "private": true
