--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.4.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.santosediego</groupId>
+	<groupId>com.piovanluis</groupId>
 	<artifactId>dsdeliver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dsdeliver</name>
